--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@
 .history
 .ionide
 
+### Node ###
+# Dependency directories
+node_modules/
+
 # Support for Project snippet scope
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode
