--- a/modulo3-back-end/bloco22-introducao-desenvolvimento-web-nodejs/dia22-1/X-agora-a-pratica/simpsons/package.json
+++ b/modulo3-back-end/bloco22-introducao-desenvolvimento-web-nodejs/dia22-1/X-agora-a-pratica/simpsons/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "simpsons.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ex1": "node exercicio1.js"
   },
   "keywords": [],
   "author": "",
