--- a/modulo3-back-end/bloco22-introducao-desenvolvimento-web-nodejs/dia22-1/X-agora-a-pratica/simpsons/package.json
+++ b/modulo3-back-end/bloco22-introducao-desenvolvimento-web-nodejs/dia22-1/X-agora-a-pratica/simpsons/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "simpsons.js",
   "scripts": {
-    "ex1": "node exercicio1.js"
+    "ex1": "node exercicio1.js",
+    "ex2": "node exercicio2.js"
   },
   "keywords": [],
   "author": "",
