22-1: agora a prática - exercício 6.c

--- a/modulo3-back-end/bloco22-introducao-desenvolvimento-web-nodejs/dia22-1/X-agora-a-pratica/simpsons/package.json
+++ b/modulo3-back-end/bloco22-introducao-desenvolvimento-web-nodejs/dia22-1/X-agora-a-pratica/simpsons/package.json
@@ -5,7 +5,8 @@
   "main": "simpsons.js",
   "scripts": {
     "ex1": "node exercicio1.js",
-    "ex2": "node exercicio2.js"
+    "ex2": "node exercicio2.js",
+    "ex3": "node exercicio3.js"
   },
   "keywords": [],
   "author": "",
