22-1: agora a prática - exercício 6.d

--- a/modulo3-back-end/bloco22-introducao-desenvolvimento-web-nodejs/dia22-1/X-agora-a-pratica/simpsons/package.json
+++ b/modulo3-back-end/bloco22-introducao-desenvolvimento-web-nodejs/dia22-1/X-agora-a-pratica/simpsons/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "ex1": "node exercicio1.js",
     "ex2": "node exercicio2.js",
-    "ex3": "node exercicio3.js"
+    "ex3": "node exercicio3.js",
+    "ex4": "node exercicio4.js"
   },
   "keywords": [],
   "author": "",
