22-1: agora a prática - exercício 6.f

--- a/modulo3-back-end/bloco22-introducao-desenvolvimento-web-nodejs/dia22-1/X-agora-a-pratica/simpsons/package.json
+++ b/modulo3-back-end/bloco22-introducao-desenvolvimento-web-nodejs/dia22-1/X-agora-a-pratica/simpsons/package.json
@@ -8,7 +8,8 @@
     "ex2": "node exercicio2.js",
     "ex3": "node exercicio3.js",
     "ex4": "node exercicio4.js",
-    "ex5": "node exercicio5.js"
+    "ex5": "node exercicio5.js",
+    "ex6": "node exercicio6.js"
   },
   "keywords": [],
   "author": "",
